@@ -1,5 +1,6 @@
 1.03
    - bugfix: shell::script: return proper values from run cmds
+   - bugfix: shell::script: disable SIGINT when running a script
    - update: core::shell: always complete Briks on use, even when Brik is already used
    - new: core::shell: help_show_inherited and comp_show_inherited Attributes to 
           respectively show inherited Attributes on help Commands and show inherited 
